# libresource

./: configure.ac
debian/: changelog  control  libresource-client.install  libresource-dev.install  rules
examples/: Makefile.am
tests/: Makefile.am
